test_data/Xml/Unexpected/Unserializable/InvalidClassName/eventPayload/wrong.xml.exception
Expected an element representing an instance of class EventPayload with element name eventPayload, but got: utterlyInvalid at: the beginning